# social-edu-federation

./: .bandit  .gitignore  .gitlint  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pylintrc  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
lib/gitlint/: gitlint_emoji.py
src/social_edu_federation/: defaults.py  metadata_store.py  parser.py
src/social_edu_federation/backends/: base.py  saml_fer.py
src/social_edu_federation/django/: apps.py  checks.py  metadata_store.py  views.py
src/social_edu_federation/django/management/commands/: prefetch_saml_fer_metadata.py
src/social_edu_federation/django/templates/social_edu_federation/: available_idps_list.html  base.html
src/social_edu_federation/django/templates/testing/: fake_saml_idp_sso_login.html
src/social_edu_federation/django/testing/: forms.py  urls.py  views.py
src/social_edu_federation/pipeline/: __init__.py  user.py
src/social_edu_federation/testing/: saml_tools.py  settings.py
tests/: test_metadata_store.py  test_parser.py  tests.py  utils.py
tests/backends/: test_base.py  test_saml_fer.py
tests/pipeline/: test_user.py
tests/resources/: real-world-metadata.xml
tests_django/: manage.py  settings.py  urls.py  views.py
tests_django/templates/tests_django/: index.html
tests_django/tests/: conftest.py  fixtures.py  test_checks.py  test_metadata_store.py  test_views.py  tests.py
tests_django/tests/management_commands/: test_prefetch_saml_fer_metadata.py
tests_django/tests/testing/: test_views.py
