[metadata]
name = social_edu_federation
description = An SAML backend for python-social-auth dedicated to education federation (RENATER)
version = 0.0.1
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    python3-saml
    python-social-auth
    renater
    shibboleth
    Federation Education-Recherche
url = https://github.com/openfun/social-edu-federation
requires_python = >=3.8

[options]
install_requires =
    social-auth-app-django>=5.0.0
    social-auth-core[saml]>=4.2.0
packages = find:
package_dir =
    =src
zip_safe = True

[options.packages.find]
where =
    src
exclude =
    tests

[options.extras_require]
dev =
    bandit==1.7.4
    black==22.3.0
    flake8==4.0.1
    ipython==8.4.0
    isort==5.10.1
    pycodestyle==2.8.0
    pylint==2.13.9
    pyOpenSSL==20.0.1
    pytest==7.1.2
    pytest-cov==3.0.0
    tox
    wheel==0.37.1


[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99
exclude =
    .git
    .venv
    build
    dist
    docs
    manage.py
    venv
    __pycache__
    *.egg-info
    */migrations/*
    stubs.py

[pycodestyle]
max-line-length = 99

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests

[coverage:paths]
source =
    ./src/social_edu_federation

[coverage:run]
branch = true
parallel = true
source =
    social_edu_federation

[coverage:report]
show_missing = true
skip_empty = true
precision = 2

[isort]
combine_as_imports=1
default_section=THIRDPARTY
force_sort_within_sections=1
from_first=1
include_trailing_comma=1
indent='    '
known_django=django
known_first_party=social_edu_federation
line_length=88
lines_after_imports=2
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses=1
